--- a/TMDB-VIPER/feature/Movies/view/MovieVC.xib
+++ b/TMDB-VIPER/feature/Movies/view/MovieVC.xib
@@ -1,22 +1,54 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MovieVC" customModule="TMDB_VIPER" customModuleProvider="target">
             <connections>
+                <outlet property="actIndicator" destination="pk5-9Q-yyX" id="McO-sx-GE1"/>
+                <outlet property="tblViewMovies" destination="r80-Ru-VP2" id="Uxh-IW-F0S"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="r80-Ru-VP2">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="pk5-9Q-yyX">
+                    <rect key="frame" x="140" y="264" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="PrI-D5-BBQ"/>
+                        <constraint firstAttribute="width" constant="40" id="pYk-oZ-aDL"/>
+                    </constraints>
+                </activityIndicatorView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="r80-Ru-VP2" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Bld-Ld-fPw"/>
+                <constraint firstItem="pk5-9Q-yyX" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Gfn-kG-3I8"/>
+                <constraint firstItem="pk5-9Q-yyX" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NZI-Gn-0id"/>
+                <constraint firstItem="r80-Ru-VP2" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Neo-pG-hBh"/>
+                <constraint firstItem="r80-Ru-VP2" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="OWe-40-ffQ"/>
+                <constraint firstItem="r80-Ru-VP2" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="VRC-xu-bGJ"/>
+            </constraints>
+            <point key="canvasLocation" x="41.25" y="19.014084507042252"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
