--- a/TMDB-VIPER/feature/Detail/DetailVC.xib
+++ b/TMDB-VIPER/feature/Detail/DetailVC.xib
@@ -1,22 +1,135 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DetailVC" customModule="TMDB_VIPER" customModuleProvider="target">
             <connections>
+                <outlet property="actIndicator" destination="CPF-Y3-yph" id="lZO-Ls-LkT"/>
+                <outlet property="imgBackdrop" destination="AqR-6G-OEs" id="wnN-Tj-heq"/>
+                <outlet property="imgPoster" destination="kxj-Bi-Vj9" id="qNr-hz-Lw1"/>
+                <outlet property="lblOverview" destination="7mU-6P-Owr" id="Xmr-ep-6J5"/>
+                <outlet property="lblTitle" destination="1Li-K8-FuD" id="RjV-fF-5ci"/>
+                <outlet property="lblVote" destination="gbi-HD-8hE" id="HQL-P0-trz"/>
+                <outlet property="tblViewReview" destination="jFy-Kt-32h" id="bwc-aM-c8Y"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AqR-6G-OEs">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="252"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="252" id="j6R-EB-dow"/>
+                    </constraints>
+                </imageView>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kxj-Bi-Vj9">
+                    <rect key="frame" x="20" y="120" width="104" height="155"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="155" id="E24-gB-WbK"/>
+                        <constraint firstAttribute="width" constant="104" id="UxW-pn-MQp"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Li-K8-FuD">
+                    <rect key="frame" x="132" y="120" width="274" height="25.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Cf-LU-x1j">
+                    <rect key="frame" x="132" y="153.5" width="50" height="27"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gbi-HD-8hE">
+                            <rect key="frame" x="0.0" y="0.0" width="50" height="27"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                    <constraints>
+                        <constraint firstItem="gbi-HD-8hE" firstAttribute="top" secondItem="8Cf-LU-x1j" secondAttribute="top" id="Bu2-I9-M2z"/>
+                        <constraint firstAttribute="trailing" secondItem="gbi-HD-8hE" secondAttribute="trailing" id="CdN-FN-DKr"/>
+                        <constraint firstItem="gbi-HD-8hE" firstAttribute="leading" secondItem="8Cf-LU-x1j" secondAttribute="leading" id="I9k-h7-dmg"/>
+                        <constraint firstAttribute="bottom" secondItem="gbi-HD-8hE" secondAttribute="bottom" id="Ywy-Qb-kIB"/>
+                        <constraint firstAttribute="height" constant="27" id="byr-Vc-szg"/>
+                        <constraint firstAttribute="width" constant="50" id="dOm-mu-XOJ"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="radiusView">
+                            <real key="value" value="3"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="8" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mU-6P-Owr">
+                    <rect key="frame" x="12" y="283" width="390" height="20.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Review :" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cDy-37-B84">
+                    <rect key="frame" x="12" y="319" width="390" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="xvf-U3-OS1"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="CPF-Y3-yph">
+                    <rect key="frame" x="187" y="428" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="J86-Hm-UM4"/>
+                        <constraint firstAttribute="height" constant="40" id="yDP-KL-b6T"/>
+                    </constraints>
+                </activityIndicatorView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="jFy-Kt-32h">
+                    <rect key="frame" x="8" y="348" width="398" height="548"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="1Li-K8-FuD" secondAttribute="trailing" constant="8" id="4Cv-dd-28z"/>
+                <constraint firstAttribute="trailing" secondItem="jFy-Kt-32h" secondAttribute="trailing" constant="8" id="5qZ-Vz-drO"/>
+                <constraint firstAttribute="bottom" secondItem="jFy-Kt-32h" secondAttribute="bottom" id="6ka-JY-8ih"/>
+                <constraint firstAttribute="trailing" secondItem="cDy-37-B84" secondAttribute="trailing" constant="12" id="7aB-7P-g36"/>
+                <constraint firstItem="AqR-6G-OEs" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="89G-1q-HHA"/>
+                <constraint firstItem="cDy-37-B84" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="S4x-ZJ-QTb"/>
+                <constraint firstItem="8Cf-LU-x1j" firstAttribute="leading" secondItem="kxj-Bi-Vj9" secondAttribute="trailing" constant="8" id="VbY-wZ-9Ck"/>
+                <constraint firstItem="CPF-Y3-yph" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="X2R-Fa-n0z"/>
+                <constraint firstItem="cDy-37-B84" firstAttribute="top" secondItem="7mU-6P-Owr" secondAttribute="bottom" constant="15.5" id="YXL-Pa-P5m"/>
+                <constraint firstItem="1Li-K8-FuD" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="120" id="Yp5-iw-X6o"/>
+                <constraint firstAttribute="trailing" secondItem="7mU-6P-Owr" secondAttribute="trailing" constant="12" id="Zys-J7-XW2"/>
+                <constraint firstItem="AqR-6G-OEs" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="eIs-Dx-Ql7"/>
+                <constraint firstItem="CPF-Y3-yph" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="eRZ-eh-Krr"/>
+                <constraint firstItem="kxj-Bi-Vj9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="120" id="fTZ-ap-x5n"/>
+                <constraint firstItem="7mU-6P-Owr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="12" id="fmD-L7-ew5"/>
+                <constraint firstItem="kxj-Bi-Vj9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="huE-Kn-Yg4"/>
+                <constraint firstItem="1Li-K8-FuD" firstAttribute="leading" secondItem="kxj-Bi-Vj9" secondAttribute="trailing" constant="8" id="loB-Ko-pa3"/>
+                <constraint firstItem="jFy-Kt-32h" firstAttribute="top" secondItem="cDy-37-B84" secondAttribute="bottom" constant="8" id="ngu-Sc-GMs"/>
+                <constraint firstItem="AqR-6G-OEs" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="oKs-DX-mxZ"/>
+                <constraint firstItem="jFy-Kt-32h" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="ocE-ba-Fzr"/>
+                <constraint firstItem="7mU-6P-Owr" firstAttribute="top" secondItem="kxj-Bi-Vj9" secondAttribute="bottom" constant="8" id="qnL-iY-lfJ"/>
+                <constraint firstItem="8Cf-LU-x1j" firstAttribute="top" secondItem="1Li-K8-FuD" secondAttribute="bottom" constant="8" id="tj1-TE-WgQ"/>
+            </constraints>
+            <point key="canvasLocation" x="137.68115942028987" y="18.75"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
