--- a/TMDB-VIPER/feature/Movies/view/cell/ItemMovieCell.xib
+++ b/TMDB-VIPER/feature/Movies/view/cell/ItemMovieCell.xib
@@ -11,69 +11,50 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="335" id="KGk-i7-Jjw" customClass="ItemMovieCell" customModule="TMDB_VIPER" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="335"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="198" id="KGk-i7-Jjw" customClass="ItemMovieCell" customModule="TMDB_VIPER" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="353" height="198"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="360" height="335"/>
+                <rect key="frame" x="0.0" y="0.0" width="353" height="198"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xzg-GW-iCo">
-                        <rect key="frame" x="0.0" y="0.0" width="140" height="335"/>
+                        <rect key="frame" x="0.0" y="0.0" width="140" height="198"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="140" id="bFG-yf-QvD"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yq6-kL-dIv">
-                        <rect key="frame" x="152" y="12" width="196" height="21.666666666666671"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yq6-kL-dIv">
+                        <rect key="frame" x="152" y="12.000000000000002" width="189" height="21.666666666666671"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MII-Bt-f9c">
-                        <rect key="frame" x="152" y="41.666666666666664" width="43" height="20"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="92.0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ZK-O4-lgD">
-                                <rect key="frame" x="0.0" y="0.0" width="43" height="20"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="11"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemYellowColor"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="43" id="2Eg-JT-zol"/>
-                            <constraint firstAttribute="height" constant="20" id="j1g-jv-YO4"/>
-                            <constraint firstItem="5ZK-O4-lgD" firstAttribute="top" secondItem="MII-Bt-f9c" secondAttribute="top" id="mMC-bo-lcc"/>
-                            <constraint firstItem="5ZK-O4-lgD" firstAttribute="leading" secondItem="MII-Bt-f9c" secondAttribute="leading" id="o0Z-RE-zIW"/>
-                            <constraint firstAttribute="bottom" secondItem="5ZK-O4-lgD" secondAttribute="bottom" id="q2B-Fb-q11"/>
-                            <constraint firstAttribute="trailing" secondItem="5ZK-O4-lgD" secondAttribute="trailing" id="wgT-AZ-ai9"/>
-                        </constraints>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="number" keyPath="radiusView">
-                                <real key="value" value="3"/>
-                            </userDefinedRuntimeAttribute>
-                        </userDefinedRuntimeAttributes>
-                    </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="15" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49M-IK-tGa">
-                        <rect key="frame" x="152" y="69.666666666666686" width="196" height="14.333333333333329"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49M-IK-tGa">
+                        <rect key="frame" x="152" y="63.000000000000007" width="189" height="14.333333333333336"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="92.0" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ZK-O4-lgD">
+                        <rect key="frame" x="152" y="41.666666666666664" width="189" height="13.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="11"/>
+                        <color key="textColor" systemColor="systemYellowColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="49M-IK-tGa" secondAttribute="trailing" constant="12" id="4F6-DL-dvq"/>
-                    <constraint firstItem="49M-IK-tGa" firstAttribute="leading" secondItem="Xzg-GW-iCo" secondAttribute="trailing" constant="12" id="Dtx-cW-Eby"/>
-                    <constraint firstItem="49M-IK-tGa" firstAttribute="top" secondItem="MII-Bt-f9c" secondAttribute="bottom" constant="8" id="H2O-i5-q7B"/>
+                    <constraint firstAttribute="trailing" secondItem="49M-IK-tGa" secondAttribute="trailing" constant="12" id="4bd-oo-gKP"/>
+                    <constraint firstItem="5ZK-O4-lgD" firstAttribute="leading" secondItem="Xzg-GW-iCo" secondAttribute="trailing" constant="12" id="Giw-5v-ugD"/>
                     <constraint firstItem="Xzg-GW-iCo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="OnS-Rz-tYh"/>
+                    <constraint firstItem="5ZK-O4-lgD" firstAttribute="top" secondItem="yq6-kL-dIv" secondAttribute="bottom" constant="8" id="RGl-lT-jRK"/>
                     <constraint firstAttribute="trailing" secondItem="yq6-kL-dIv" secondAttribute="trailing" constant="12" id="Ubw-LC-FOR"/>
+                    <constraint firstItem="49M-IK-tGa" firstAttribute="top" secondItem="5ZK-O4-lgD" secondAttribute="bottom" constant="8" id="YDn-bo-I3j"/>
                     <constraint firstItem="yq6-kL-dIv" firstAttribute="leading" secondItem="Xzg-GW-iCo" secondAttribute="trailing" constant="12" id="ZYh-Rj-8fD"/>
-                    <constraint firstItem="MII-Bt-f9c" firstAttribute="top" secondItem="yq6-kL-dIv" secondAttribute="bottom" constant="8" id="heh-ay-0vJ"/>
+                    <constraint firstItem="49M-IK-tGa" firstAttribute="leading" secondItem="Xzg-GW-iCo" secondAttribute="trailing" constant="12" id="i4X-Ix-yFn"/>
                     <constraint firstItem="Xzg-GW-iCo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="iEH-i5-LSu"/>
                     <constraint firstAttribute="bottom" secondItem="Xzg-GW-iCo" secondAttribute="bottom" id="kAo-xf-k5a"/>
-                    <constraint firstItem="MII-Bt-f9c" firstAttribute="leading" secondItem="Xzg-GW-iCo" secondAttribute="trailing" constant="12" id="lJO-DI-FzW"/>
-                    <constraint firstAttribute="bottom" secondItem="49M-IK-tGa" secondAttribute="bottom" constant="8" id="mTw-u6-20e"/>
+                    <constraint firstAttribute="trailing" secondItem="5ZK-O4-lgD" secondAttribute="trailing" constant="12" id="wWT-L0-aZe"/>
                     <constraint firstItem="yq6-kL-dIv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="zaW-j8-dj4"/>
                 </constraints>
                 <userDefinedRuntimeAttributes>
@@ -89,7 +70,7 @@
                 <outlet property="lblTitle" destination="yq6-kL-dIv" id="1LE-vb-9id"/>
                 <outlet property="lblVote" destination="5ZK-O4-lgD" id="5fv-e2-TPF"/>
             </connections>
-            <point key="canvasLocation" x="103.81679389312977" y="60.91549295774648"/>
+            <point key="canvasLocation" x="89.312977099236633" y="-50"/>
         </tableViewCell>
     </objects>
     <resources>
